change average gr command to rdf and started documentation

--- a/example.ipynb
+++ b/example.ipynb
@@ -835,7 +835,7 @@
     "    system.time += system.timestep_length\n",
     "    if system.step % sample_frequency == 0:\n",
     "        sample_system.update(particles, system)\n",
-    "sample_system.average_gr()"
+    "sample_system.average_rdf()"
    ]
   },
   {
