docstrings for the md.py

--- a/ideal_gas.ipynb
+++ b/ideal_gas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,14 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([ 1.69463906]), array([[ 0.01520545]]))\n"
+     ]
+    },
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGAlJREFUeJzt3X+Q3PV93/Hnm9OvEz98/BAYTmDJsaKGxK1Fr5gZbLfF\nKQKSWKpre2iTWnWY0XTqzOC6VYLqTkltp8bRNP4xk5ChwRPhcQzEEULj0sgaoPXUHTAnBBY/rCDb\nYHSSkRwhTKxD0knv/rGfE3un+7F7utvd0/f5mNnZ7773s7ef/e7e5/Xdz/e7u5GZSJKq56x2d0CS\n1B4GgCRVlAEgSRVlAEhSRRkAklRRBoAkVZQBIEkVZQBIUkUZAJJUUXPa3YGJXHTRRblkyZJ2d0OS\nZpXt27f/NDMXTdauowNgyZIl9Pf3t7sbkjSrRMRLjbRzCkiSKsoAkKSKMgAkqaIMAEmqKANAkiqq\no48CkqSq2bxjgA1bd7H30CCX9XSzbuVyVq/onZH7MgAkqUNs3jHA+k07GTx2HICBQ4Os37QTYEZC\nwCkgSeoQG7buOjn4Dxs8dpwNW3fNyP0ZAJLUIfYeGmyqfroMAEnqEJf1dDdVP10GgCR1iHUrl9M9\nt2tErXtuF+tWLp+R+3MnsCR1iOEdvR11FFBEvAi8DhwHhjKzLyIuAO4DlgAvAh/JzFcjIoAvATcB\nh4F/k5lPlr+zBvjP5c9+NjM3Tt9DkaTZb/WK3hkb8EdrZgron2bmuzKzr1y+DXg4M5cBD5fLADcC\ny8ppLXAnQAmM24F3A1cDt0fE+af/ECRJU3E6+wBWAcNb8BuB1XX1e7LmMaAnIi4FVgLbMvNgZr4K\nbANuOI37lySdhkYDIIFvRcT2iFhbapdk5j6Acn5xqfcCL9fddk+pjVeXJLVBozuBr83MvRFxMbAt\nIr4/QdsYo5YT1EfeuBYwawGuuOKKBrsnSWpWQ+8AMnNvOd8PPEBtDv+VMrVDOd9fmu8BLq+7+WJg\n7wT10fd1V2b2ZWbfokWT/qKZJGmKJg2AiDg7Is4dXgauB54BtgBrSrM1wINleQvw0ai5BnitTBFt\nBa6PiPPLzt/rS02S1AaNTAFdAjxQO7qTOcBfZOZfR8QTwP0RcQvwY+DDpf1D1A4B3U3tMNCPAWTm\nwYj4DPBEaffpzDw4bY9EktSUyDxlGr5j9PX1pT8KL0nNiYjtdYfsj8uvgpCkijIAJKmiDABJqigD\nQJIqygCQpIoyACSpogwASaooA0CSKsoAkKSKMgAkqaIMAEmqKANAkirKAJCkijIAJKmiDABJqigD\nQJIqygCQpIoyACSpogwASaooA0CSKsoAkKSKMgAkqaIMAEmqKANAkirKAJCkijIAJKmiDABJqigD\nQJIqygCQpIpqOAAioisidkTEN8vlpRHxeES8EBH3RcS8Up9fLu8u1y+p+xvrS31XRKyc7gcjSWpc\nM+8AbgWer7v8eeALmbkMeBW4pdRvAV7NzHcAXyjtiIgrgZuBXwZuAP4kIrpOr/uSpKlqKAAiYjHw\na8CflcsBXAd8ozTZCKwuy6vKZcr17y/tVwH3ZuaRzPwRsBu4ejoehCSpeY2+A/gi8LvAiXL5QuBQ\nZg6Vy3uA3rLcC7wMUK5/rbQ/WR/jNpKkFps0ACLi14H9mbm9vjxG05zkuoluU39/ayOiPyL6Dxw4\nMFn3JElT1Mg7gGuBD0TEi8C91KZ+vgj0RMSc0mYxsLcs7wEuByjXvwU4WF8f4zYnZeZdmdmXmX2L\nFi1q+gFJkhozaQBk5vrMXJyZS6jtxH0kM38TeBT4UGm2BniwLG8plynXP5KZWeo3l6OElgLLgO9O\n2yORJDVlzuRNxvV7wL0R8VlgB3B3qd8NfDUidlPb8r8ZIDOfjYj7geeAIeDjmXn8NO5fknQaorZx\n3pn6+vqyv7+/3d2QpFklIrZnZt9k7fwksCRVlAEgSRVlAEhSRRkAklRRBoAkVZQBIEkVZQBIUkUZ\nAJJUUQaAJFWUASBJFWUASFJFGQCSVFEGgCRVlAEgSRVlAEhSRRkAklRRBoAkVZQBIEkVZQBIUkUZ\nAJJUUQaAJFWUASBJFWUASFJFGQCSVFEGgCRVlAEgSRVlAEhSRRkAklRRBoAkVdSkARARCyLiuxHx\ndEQ8GxH/tdSXRsTjEfFCRNwXEfNKfX65vLtcv6Tub60v9V0RsXKmHpQkaXKNvAM4AlyXmf8AeBdw\nQ0RcA3we+EJmLgNeBW4p7W8BXs3MdwBfKO2IiCuBm4FfBm4A/iQiuqbzwUiSGjdpAGTN35WLc8sp\ngeuAb5T6RmB1WV5VLlOuf39ERKnfm5lHMvNHwG7g6ml5FJKkpjW0DyAiuiLiKWA/sA34AXAoM4dK\nkz1Ab1nuBV4GKNe/BlxYXx/jNpKkFmsoADLzeGa+C1hMbav9l8ZqVs5jnOvGq48QEWsjoj8i+g8c\nONBI9yRJU9DUUUCZeQj438A1QE9EzClXLQb2luU9wOUA5fq3AAfr62Pcpv4+7srMvszsW7RoUTPd\nkyQ1oZGjgBZFRE9Z7gZ+FXgeeBT4UGm2BniwLG8plynXP5KZWeo3l6OElgLLgO9O1wORpIls3jHA\ntXc8wtLb/ifX3vEIm3cMtLtLbTdn8iZcCmwsR+ycBdyfmd+MiOeAeyPis8AO4O7S/m7gqxGxm9qW\n/80AmflsRNwPPAcMAR/PzOPT+3Ak6VSbdwywftNOBo/VhpyBQ4Os37QTgNUrqrsrMmob552pr68v\n+/v7290NSbPctXc8wsChwVPqvT3dfOe269rQo5kVEdszs2+ydn4SWNIZb+8Yg/9E9aowACSd8S7r\n6W6qXhUGgKQz3rqVy+meO/KLB7rndrFu5fI29agzNLITWJJmteEdvRu27mLvoUEu6+lm3crlld4B\nDAaApIpYvaK38gP+aE4BSVJFGQCSVFEGgCRVlAEgSRVlAEhSRRkAklRRBoAkVZQBIEkVZQBIUkUZ\nAJJUUQaAJFWUASBJFWUASFJFGQCSVFEGgCRVlAEgSRVlAEhSRRkAklRRBoAkVZQBIEkVZQBIUkUZ\nAJJUUQaAJFWUASBJFTVpAETE5RHxaEQ8HxHPRsStpX5BRGyLiBfK+fmlHhHx5YjYHRHfi4ir6v7W\nmtL+hYhYM3MPS5I0mUbeAQwB/yEzfwm4Bvh4RFwJ3AY8nJnLgIfLZYAbgWXltBa4E2qBAdwOvBu4\nGrh9ODQkSa03aQBk5r7MfLIsvw48D/QCq4CNpdlGYHVZXgXckzWPAT0RcSmwEtiWmQcz81VgG3DD\ntD4aSVLDmtoHEBFLgBXA48AlmbkPaiEBXFya9QIv191sT6mNV5cktUHDARAR5wB/BXwiM382UdMx\najlBffT9rI2I/ojoP3DgQKPdkyQ1qaEAiIi51Ab/r2XmplJ+pUztUM73l/oe4PK6my8G9k5QHyEz\n78rMvszsW7RoUTOPRZLUhEaOAgrgbuD5zPyjuqu2AMNH8qwBHqyrf7QcDXQN8FqZItoKXB8R55ed\nv9eXmiSpDeY00OZa4F8DOyPiqVL7T8AdwP0RcQvwY+DD5bqHgJuA3cBh4GMAmXkwIj4DPFHafToz\nD07Lo5AkNS0yT5mG7xh9fX3Z39/f7m5I0qwSEdszs2+ydn4SWJIqqpEpIElqyOYdA2zYuou9hwa5\nrKebdSuXs3qFR3t3KgNA0rTYvGOA9Zt2MnjsOAADhwZZv2kngCHQoZwCkjQtNmzddXLwHzZ47Dgb\ntu5qU480GQNA0rTYe2iwqbrazwCQNC0u6+luqq72MwAkTYt1K5fTPbdrRK17bhfrVi5vU480GXcC\nS5oWwzt6PQpo9jAAJE2b1St6HfBnEaeAJKmiDABJqigDQJIqygCQpIoyACSpogwASaooA0CSKsoA\nkKSKMgAkqaIMAEmqKANAkirKAJCkijIAJKmiDABJqigDQJIqygCQpIoyACSpogwASaooA0CSKsrf\nBJZmsc07BvwRdk3ZpO8AIuIrEbE/Ip6pq10QEdsi4oVyfn6pR0R8OSJ2R8T3IuKqutusKe1fiIg1\nM/NwpOrYvGOA9Zt2MnBokAQGDg2yftNONu8YaHfXNEs0MgX058ANo2q3AQ9n5jLg4XIZ4EZgWTmt\nBe6EWmAAtwPvBq4Gbh8ODUlTs2HrLgaPHR9RGzx2nA1bd7WpR5ptJg2AzPw2cHBUeRWwsSxvBFbX\n1e/JmseAnoi4FFgJbMvMg5n5KrCNU0NFUhP2Hhpsqi6NNtWdwJdk5j6Acn5xqfcCL9e121Nq49Ul\nTdFlPd1N1aXRpvsooBijlhPUT/0DEWsjoj8i+g8cODCtnZPOJOtWLqd7bteIWvfcLtatXN6mHmm2\nmWoAvFKmdijn+0t9D3B5XbvFwN4J6qfIzLsysy8z+xYtWjTF7klnvtUrevncB99Jb083AfT2dPO5\nD77To4DUsKkeBroFWAPcUc4frKv/TkTcS22H72uZuS8itgL/rW7H7/XA+ql3WxLUQsABX1M1aQBE\nxNeBfwJcFBF7qB3Ncwdwf0TcAvwY+HBp/hBwE7AbOAx8DCAzD0bEZ4AnSrtPZ+boHcuSpBaKzDGn\n4jtCX19f9vf3t7sbkjSrRMT2zOybrJ1fBSFJFWUASFJFGQCSVFEGgCRVlN8GKp0Gv41Ts5kBIE3R\n8LdxDn8h2/C3cQKGgGYFp4CkKfLbODXbGQDSFPltnJrtDABpivw2Ts12BoA0RX4bp2Y7dwJLUzS8\no9ejgDRbGQDSafDbODWbOQUkSRVlAEhSRTkFpDOCn8iVmmcAaNbzE7nS1DgFpFnPT+RKU2MAaNbz\nE7nS1BgAmvX8RK40Ne4D0Ky3buXyEfsAwE/kqgNlwvGjcPTncOwwHBssy4Nw7Odw9PDI5cX/CK54\n94x2yQDQjGrF0Tl+IlfTIhOG3ph4YD553eFRy4dPHcDHWs4Tjffnfb9rAGj2auXROX4itwIyy0Ba\nP7AensJgPNZtBmvnzQzQAF3zYG43zD0b5i18c3n+uXDuW2Fuqc07u1y3sG551G1Othu+zTkzsx7r\nGACaMRMdneNgfQY6cQKGBscZjJtYHncwPwxkc33qml8G2YUjB+MFPXDupXUD7sKRg/FYtzlleSF0\nze4hdHb3Xh3No3M6zIkTdYNso4PxZO3qtqyHpvC8zlkwagAup4UXwNzFp9bHHZjHaDene9YP0DPN\ntaMZm6e/rKebgTEGe4/OGceJ45MMuD9/c0t4KlvWQ28036c53WVgHZ6iKMsLL4Ke8QbmsQbt+tvX\nnc7yQMR2MgAqbibn6c+4o3OODzUxGA/vMBxnAB/r9sePNNmhqNsSrh9kz4ZzLh4139zEwDx8mznd\nDtBnOAOg4mZynr7lR+ccPzbOwDyFwXjEbcry8aNNdijGmDsug/F5l43a+TfGVvZEOw/ndtdOETOy\nKlUNBsAsM93TNTM9Tz/i6Jyho7XB9Gd7Rw2yYw3GYwzA4w7m5fzEseY6F2edeiTG8HL3+ZMcoTHO\nkRz1W9Jz5jtAq6MZAC10uoP3TEzXvDlPn8xjiG6O0M0Rlp4XsPepCY6FHj2Aj/5gyxhb1ieGmutc\ndL056I6eulh44QQ7AicZmIdv0zXPAVqV1vIAiIgbgC8BXcCfZeYdre7DeBodoKcykJ/24J3Jl/56\nJ/OPHeJ8jtAdtYF64dARvv3QM6yev2yCwXj8D6Y8nH/H0Pyfs4AjzIm6Y6CPAndN0qez5o59hMa8\ns+HsRWNcN8ZgPNHOwznzJl8vkqaspQEQEV3AHwP/DNgDPBERWzLzuVbc/0QDd6MD9LjtMln9KxeM\n2kp+czB+4qHHuen463R3HSlb2UdZmEc4/s0heOnCCbam3zwG+tE8AQvGeGDHgPvHqHfNG3tH4ILz\nTn5IZcG8hex+9QT/96XD7H+ji3ndZ/OPf2UJK36hd5Kdhwuha+50Pj2SWqzV7wCuBnZn5g8BIuJe\nYBUw4wGw+cmX+fQD2+HYIL1xhO7XjvC1Tc9x0U97ec/bzqb/ocf5tROvs6DrKAt5g4VxhAV59M0B\nugzGV/xgL1+PwyycVxvEh7fEu7cchS3jf0jlDwBGbdC+kXMZHJoPP+wZufNvQU/ZSThyR+Cd/28f\nPxnsYpB5DOZ8BpnPYeZzzjnncddvv/fUrekGj4F+RzlJqpZWB0Av8HLd5T3A9H/ZxU92wjduGTHl\nsXpokNVd1Cae6n2ndvoswKgN2sGcx+DQPPjR+Sfnjo8NDXE4z2UvFzHIfAZPzOMwCxhkPrfe8PfH\nPZLjt+7ZyUuvJ4O5oDaAM58TnEVvTzff+eR1DT2sS88f4MtjHFb5uRvfCW/1k7WSmtPqABhrj9uI\nzeaIWAusBbjiiiumdi/zzoGL/96IHYFf/PYAg1nbYh5k/ojle//ddfzWPTt58fU8WX+DeeTwAP3v\n3xygP3nHI2N+uKm3p5tb3zP+QP6hGy897WPi/dIzSdOp1QGwB7i87vJiYG99g8y8i7L7sa+vr8kv\n/iguWAofuWdE6S+fHH/gZvE/5EM3vrWhAXqqH26arsHbLz2TNF1aHQBPAMsiYikwANwM/KtW3PFk\nA3ejA/TpDOQO3pI6SWRObSN7yncYcRPwRWqz8V/JzD8Yr21fX1/29/dP23234rvpJandImJ7ZvZN\n2q7VAdCM6Q4ASaqCRgPAb3qSpIoyACSpogwASaooA0CSKsoAkKSK6uijgCLiAPDSafyJi4CfTlN3\nplOn9gvs21TZt+Z1ar9g9vftbZm5aLI/1NEBcLoior+RQ6FarVP7BfZtquxb8zq1X1CdvjkFJEkV\nZQBIUkWd6QEw2W9atUun9gvs21TZt+Z1ar+gIn07o/cBSJLGd6a/A5AkjeOMDICIuCEidkXE7oi4\nrc19uTwiHo2I5yPi2Yi4tdR/PyIGIuKpcrqpTf17MSJ2lj70l9oFEbEtIl4o5+e3uE/L69bLUxHx\ns4j4RDvXWUR8JSL2R8QzdbUx11PUfLm8/r4XEVe1uF8bIuL75b4fiIieUl8SEYN16+9PZ6pfE/Rt\n3OcwItaXdbYrIla2oW/31fXrxYh4qtRbtt4mGC9m5rWWmWfUidrXTP8AeDu1X+F9Griyjf25FLiq\nLJ8L/A1wJfD7wH/sgPX1InDRqNofAreV5duAz7f5+fwJ8LZ2rjPgfcBVwDOTrSfgJuB/UfsFvGuA\nx1vcr+uBOWX583X9WlLfrk3rbMznsPxPPA3MB5aW/+GuVvZt1PX/HfgvrV5vE4wXM/JaOxPfAZz8\n4fnMPAoM//B8W2Tmvsx8siy/DjxP7beRO9kqYGNZ3gisbmNf3g/8IDNP5wOBpy0zvw0cHFUebz2t\nAu7JmseAnoi4tFX9ysxvZeZQufgYtV/ea7lx1tl4VgH3ZuaRzPwRsJva/3LL+xYRAXwE+PpM3f94\nJhgvZuS1diYGwFg/PN8RA25ELAFWAI+X0u+Ut21fafU0S50EvhUR26P2e8wAl2TmPqi9IIGL29Q3\nqP1qXP0/Yiess2HjradOeg3+NrUtxGFLI2JHRPyfiHhvm/o01nPYSevsvcArmflCXa3l623UeDEj\nr7UzMQAm/eH5doiIc4C/Aj6RmT8D7gR+AXgXsI/aW852uDYzrwJuBD4eEe9rUz9OERHzgA8Af1lK\nnbLOJtMRr8GI+BQwBHytlPYBV2TmCuCTwF9ExHkt7tZ4z2FHrLPiXzJyo6Pl622M8WLcpmPUGl5v\nZ2IATPrD860WEXOpPZlfy8xNAJn5SmYez8wTwP9gBt/uTiQz95bz/cADpR+vDL+NLOf729E3aqH0\nZGa+UvrYEeusznjrqe2vwYhYA/w68JtZJovL9MrfluXt1ObZf7GV/ZrgOWz7OgOIiDnAB4H7hmut\nXm9jjRfM0GvtTAyAkz88X7Ygbwa2tKszZT7xbuD5zPyjunr9PN0/B54ZfdsW9O3siDh3eJnazsNn\nqK2vNaXZGuDBVvetGLEl1gnrbJTx1tMW4KPlCI1rgNeG3763QkTcAPwe8IHMPFxXXxQRXWX57cAy\n4Iet6le53/Gewy3AzRExPyKWlr59t5V9K34V+H5m7hkutHK9jTdeMFOvtVbs2W71idqe8b+hltSf\nanNf3kPtLdn3gKfK6Sbgq8DOUt8CXNqGvr2d2pEXTwPPDq8r4ELgYeCFcn5BG/q2EPhb4C11tbat\nM2pBtA84Rm2r65bx1hO1t+V/XF5/O4G+FvdrN7V54eHX25+Wtv+iPM9PA08Cv9GGdTbucwh8qqyz\nXcCNre5bqf858G9HtW3ZeptgvJiR15qfBJakijoTp4AkSQ0wACSpogwASaooA0CSKsoAkKSKMgAk\nqaIMAEmqKANAkirq/wMU8yp/d5tdiAAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f28e38cff60>"
+       "<matplotlib.figure.Figure at 0x7fb9ec0e3128>"
       ]
      },
      "metadata": {},
@@ -41,18 +48,30 @@
     "plt.plot(N**2, p, 'o')\n",
     "x = np.arange(0, N[-1]**2, 0.1)\n",
     "c = scipy.optimize.curve_fit(a, N[:n]**2, p[:n])[0][0]\n",
+    "print(scipy.optimize.curve_fit(a, N[:n]**2, p[:n]))\n",
     "plt.plot(x, a(x, c))\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.746961348145895"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "21.78 * np.cos(np.deg2rad(30.6))"
+   ]
   },
   {
    "cell_type": "code",
