update of the scattering profile presentation

--- a/examples/ideal_gas_law/ideal_gas_law.ipynb
+++ b/examples/ideal_gas_law/ideal_gas_law.ipynb
@@ -203,7 +203,7 @@
    },
    "outputs": [],
    "source": [
-    "simulation1 = md_simulation(4, 100., 40, 10000, sample.JustCell)"
+    "simulation1 = md_simulation(4, 100., 100, 10000, sample.JustCell)"
    ]
   },
   {
@@ -254,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "simulation2 = md_simulation(40, ◽◽◽, 40, 10000, sample.Energy)"
