adding molecular dynamics example

--- a/examples/ideal_gas_law/ideal_gas_law.ipynb
+++ b/examples/ideal_gas_law/ideal_gas_law.ipynb
@@ -33,9 +33,9 @@
     "\n",
     "This means that the Lennard-Jones function is attractive when particles are close enough to induce dipole formation but **very** repulsive when the particles are too close. The Lennard-Jones function has the following form,\n",
     "\n",
-    "$$ E(r) = 4\\epsilon \\bigg(\\frac{\\sigma^{12}}{r^{12}} - \\frac{\\sigma^6}{r^6}\\bigg),$$\n",
+    "$$ E(r) = \\frac{A}{r^{12}} - \\frac{B}{r^6}, $$\n",
     "\n",
-    "where $E(r)$ is the potential energy at a given distance $r$, while $\\epsilon$ and $\\sigma$ are parameters specific to the nature of the given interaction. In the cell below, write a function to calculate the energy of an interaction between two argon atoms for given range of distances using the Lennard-Jones function as the model."
+    "where $E(r)$ is the potential energy at a given distance $r$, while $A$ and $B$ are parameters specific to the nature of the given interaction. In the cell below, write a function to calculate the energy of an interaction between two argon atoms for given range of distances using the Lennard-Jones function as the model."
    ]
   },
   {
@@ -56,9 +56,9 @@
    "source": [
     "Then use this function to plot the potential energy from $r=3$ Å to $r=8$ Å, and discuss the shape and sign of this function in terms of the attractive and repulsive regimes, when the values of ε and σ are as follows.\n",
     "\n",
-    "| ε/$\\times10^{-21}$J | σ/$\\times10^{-10}$m |\n",
+    "| A/$\\times10^{-134}$Jm$^{12}$ | B/$\\times10^{-78}$Jm$^6$ |\n",
     "|:------:|:------:|\n",
-    "| 1.66 | 3.4 |"
+    "| 1.36 | 9.27 |"
    ]
   },
   {
