adding MC example

--- a/examples/molecular_dynamics/intro_to_molecular_dynamics.ipynb
+++ b/examples/molecular_dynamics/intro_to_molecular_dynamics.ipynb
@@ -158,7 +158,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Comment on the problems of starting in a ranodm configuration. Consider the possible problems of simulations that start at very high energy. "
+    "# Comment on the problems of starting in a random configuration. Consider the possible problems of simulations that start at very high energy. "
    ]
   },
   {
