Update the guide

--- a/guide.ipynb
+++ b/guide.ipynb
@@ -91,190 +91,7 @@
     "1. teaching about simulation algorithms, the mechanics of simulation and allowing the students to build a simulation themselves,\n",
     "2. showing how simulation can be used to study physical attributes of chemical systems, consolidating learning introduced as lecture material. \n",
     "\n",
-    "We will introduce both of this, as they are link, although neither are reliant on the other. \n",
-    "\n",
-    "### simulation algorithms \n",
-    "\n",
-    "A common aspect of a final-year undergraduate degree is a course introducing simulation techniques, in particular molecular dynamics and Monte Carlo. In an effort to build on lecture material, it is possible to apply pylj as a tool to introduce these techniques in an interactive learning environment. \n",
-    "\n",
-    "#### molecular dynamics \n",
-    "\n",
-    "Typically molecular dynamics is taught as consisting of the following algorithm, \n",
-    "\n",
-    "1. initialise the system,\n",
-    "2. start the clock, \n",
-    "3. calculate the forces of each particle,\n",
-    "4. integrate Newton's equations of motion to step forward in time,\n",
-    "5. sample the system,\n",
-    "6. go to 3.\n",
-    "\n",
-    "This would look as follows in pylj. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pylj import md, sample, comp\n",
-    "\n",
-    "def md_simulation(number_of_particles, temperature, box_length, number_of_steps, sample_frequency):\n",
-    "    # Creates the visualisation environment\n",
-    "    %matplotlib notebook\n",
-    "    # Initialise the system\n",
-    "    system = md.initialise(number_of_particles, temperature, box_length, 'square')\n",
-    "    # This sets the sampling class\n",
-    "    sample_system = sample.Interactions(system)\n",
-    "    # Start at time 0\n",
-    "    system.time = 0\n",
-    "    # Begin the molecular dynamics loop\n",
-    "    for i in range(0, number_of_steps):\n",
-    "        # At each step, calculate the forces on each particle and get acceleration\n",
-    "        system.particles, system.distances, system.forces, system.energies = comp.compute_forces(system.particles, \n",
-    "                                                                                                 system.box_length, \n",
-    "                                                                                                 system.cut_off)\n",
-    "        # Run the equations of motion integrator algorithm\n",
-    "        system.particles = md.velocity_verlet(system.particles, system.timestep_length, system.box_length, \n",
-    "                                              system.cut_off)\n",
-    "        # Sample the thermodynamic and structural parameters of the system\n",
-    "        system = md.sample(system.particles, system.box_length, system.initial_particles, system)\n",
-    "        # Iterate the time\n",
-    "        system.time += system.timestep_length\n",
-    "        system.step += 1\n",
-    "        # At a given frequency sample the positions and update the plots\n",
-    "        if system.step % sample_frequency == 0:\n",
-    "            sample_system.update(system)\n",
-    "    return system"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Hopefully it is clear that there are a wide variety of teaching aspects available within this algorithm alone, possible discussions include (but are not limited to):\n",
-    "\n",
-    "- initialising the system on a square lattice versus a random positioning. Often the random positioning will result in the system exploding as the forces are too great,\n",
-    "- as this is an NVE ensemble it could be discussed how the temperature of the system is not that anticipated,\n",
-    "- the conversion to an NVT ensemble using the [`comp.heat_bath`](http://pylj.readthedocs.io/en/latest/comp.html#pylj.comp.heat_bath) function in the sampling stage,\n",
-    "- the discussion of different integrators, currently pylj only really supports [Velocity-Verlet](https://en.wikipedia.org/wiki/Verlet_integration#Velocity_Verlet) however there is nothing to stop students from writing their own integrator function.\n",
-    "\n",
-    "It is possible to quickly see the above function in action below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "simulation1 = md_simulation(30, 100, 30, 10000, 100)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### monte carlo\n",
-    "\n",
-    "Monte Carlo simulations are often taught in a similar fashion to molecular dynamics, with the introduction of an algorithm, \n",
-    "\n",
-    "1. initialise the system,\n",
-    "2. calculate the energy of the system,\n",
-    "3. suggest some change to the system,\n",
-    "4. calculate the energy with this change,\n",
-    "5. if some condition is true, accept the change,\n",
-    "6. go to step 2.\n",
-    "\n",
-    "Again it is straightforward to impliment this in pylj, as follows. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pylj import mc\n",
-    "\n",
-    "def mc_simulation(number_of_particles, temperature, box_length, number_of_steps, sample_frequency):\n",
-    "    # Creates the visualisation environment\n",
-    "    %matplotlib notebook\n",
-    "    # Initialise the system placing the particles on a square lattice\n",
-    "    system = mc.initialise(number_of_particles, temperature, box_length, 'square')\n",
-    "    # This sets the sampling class as Energy, which shows the energy of the system\n",
-    "    sample_system = sample.Energy(system)\n",
-    "    # Compute the energy of the system\n",
-    "    system.particles, system.distances, system.energies = comp.compute_energy(system.particles, \n",
-    "                                                                              system.box_length,\n",
-    "                                                                              system.cut_off)\n",
-    "    old_energy = system.energies.sum()\n",
-    "    # Add this energy to the energy sample array\n",
-    "    system = mc.sample(old_energy, system)\n",
-    "    # Begin the monte carlo loop\n",
-    "    for i in range(0, number_of_steps):\n",
-    "        system.step += 1\n",
-    "        # Select a random particle to remove\n",
-    "        random_particle, system.position_store = mc.select_random_particle(system.particles)\n",
-    "        # Select a random position to replace that particle\n",
-    "        system.particles = mc.get_new_particle(system.particles, random_particle, system.box_length)\n",
-    "        # Compute the new energy of the system\n",
-    "        system.particles, system.distances, system.energies = comp.compute_energy(system.particles, \n",
-    "                                                                                  system.box_length, \n",
-    "                                                                                  system.cut_off)\n",
-    "        new_energy = system.energies.sum()\n",
-    "        # Assess the Metropolis condition\n",
-    "        if mc.metropolis(temperature, old_energy, new_energy):\n",
-    "            old_energy = mc.accept(new_energy)\n",
-    "        else:\n",
-    "            system.particles = mc.reject(system.position_store, system.particles, random_particle)\n",
-    "        # Add this energy to the energy sample array\n",
-    "        system = mc.sample(old_energy, system)\n",
-    "        # At a given frequency sample the positions and plot\n",
-    "        if system.step % sample_frequency == 0:\n",
-    "            sample_system.update(system)\n",
-    "    return system"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this example, the condition that must be true is the Metropolis condition. Again there are a clear number of teaching points within this algorithm:\n",
-    "\n",
-    "- changing the condition, such as a simple energy minimisation,\n",
-    "- varying the temperature to show how the Metropolis condition allows for intrinsic thermostating,\n",
-    "- again varying the starting configuration of the atoms,\n",
-    "- implimenting a grand-canonical ensemble.\n",
-    "\n",
-    "Again the above function can be seen in action below. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "system = mc_simulation(75, 100, 45, 100000, 100)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### using simulation\n",
-    "\n",
-    "The other track to use pylj in teaching would be to show the ability for simulation to probe physical properties of chemical systems. Two examples of this that pylj has been applied to previously are: \n",
-    "\n",
-    "- probing the properties of argon at gas and liquid densities, showing where the ideal gas law is valid and where it breaks down,\n",
-    "- observing the effect of the liquid to solid transition on the resulting diffraction pattern.\n",
-    "\n",
-    "The ideal gas law example has been written into a full undergraduate laboratory exercise and can be downloaded [here](https://github.com/arm61/pylj/tree/master/examples/ideal_gas_law). In this exercise, the student is introduced to classical simulation, Lennard-Jones potential, and molecular dynamics. A function is then given to allow the student to perform a NVT molecular dynamics simulation, and the student is asked to probe the effect of temperature on the energy of the system, the effect of density on the radial distribution function and the effect of density on the ideal gas law, showing that it breaks down at the gas-liquid transition. The student is then introduced to the van der Waals equation and given the opportunity to use it to rationalise the observed deviation from the ideal gas law. \n",
-    "\n",
-    "The other example has been used previously in a lecture environment, at the ISIS Neutron Training Course during a lecture on molecular simulation, which can be found [here](https://github.com/bjmorgan/python_in_chemistry/tree/master/Neutron_Training_Course). In this, the students were shown the pylj simulations along with the Scattering sampling class, which shows the diffraction profile for the system under study. The aim of this application was to show the students attending the course (who were unfamiliar with classical simulation) the possible links between simulation and experiment, pylj was able to provide a simple interface to allow for this."
+    "Some examples of these can be found in the [examples directory](./examples/), in particular the [molecular dynamics](./examples/molecular_dynamics/intro_to_molecular_dynamics.ipynb) and [Monte Carlo](./examples/monte_carlo/intro_to_monte_carlo.ipynb) examples show how pylj could be used in the teaching of molecular simulations, while the [ideal gas law](./examples/ideal_gas_law/ideal_gas_law.ipynb) notebook is examplary of how pylj can be used to present, in an interactive fashion, the deviation from the ideal gas law that is observed following the gas-to-liquid transition. "
    ]
   },
   {
